{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 180,
  "lineage": "4ebcf86c-a1e9-9c14-44ce-fdf71da7d156",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ec2-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:633800640196:listener/app/terraform-lab-alb/108bed97773f6067/3c966508eee7631d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:633800640196:targetgroup/terraform-lab-tg/9ae6a68dc7899dfd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:633800640196:listener/app/terraform-lab-alb/108bed97773f6067/3c966508eee7631d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:633800640196:loadbalancer/app/terraform-lab-alb/108bed97773f6067",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.default-target-group",
            "aws_lb.development",
            "aws_security_group.load-balancer",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:633800640196:targetgroup/terraform-lab-tg/9ae6a68dc7899dfd",
            "arn_suffix": "targetgroup/terraform-lab-tg/9ae6a68dc7899dfd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:633800640196:targetgroup/terraform-lab-tg/9ae6a68dc7899dfd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:633800640196:loadbalancer/app/terraform-lab-alb/108bed97773f6067"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-lab-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-071096b5a46adb53f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0905ad0033881a15d",
            "arn": "arn:aws:ec2:us-east-2:633800640196:elastic-ip/eipalloc-0905ad0033881a15d",
            "associate_with_private_ip": "10.0.0.5",
            "association_id": "eipassoc-09d102b485f1e5a6f",
            "domain": "vpc",
            "id": "eipalloc-0905ad0033881a15d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-060bec577a34a8211",
            "private_dns": "ip-10-0-1-231.us-east-2.compute.internal",
            "private_ip": "10.0.1.231",
            "public_dns": "ec2-3-20-216-51.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.216.51",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform-lab-igw",
            "aws_vpc.terraform-lab-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0568773882d492fc8",
            "arn": "arn:aws:ec2:us-east-2:633800640196:instance/i-0a64853dad78f4d32",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session-manager",
            "id": "i-0a64853dad78f4d32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-lab_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bbda288393783094",
            "private_dns": "ip-10-0-1-9.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.9",
            "public_dns": "ec2-3-144-42-40.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.42.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e84ffdaa55e1a02",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097c5e722c0dcf4b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef82e39b8ae44d82",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-097c5e722c0dcf4b9"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.session-manager",
            "aws_key_pair.terraform-lab",
            "aws_security_group.ec2",
            "aws_subnet.public-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-lab-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633800640196:internet-gateway/igw-0a309de0ab5d3ae55",
            "id": "igw-0a309de0ab5d3ae55",
            "owner_id": "633800640196",
            "tags": {
              "Name": "terraform-lab-igw"
            },
            "tags_all": {
              "Name": "terraform-lab-igw"
            },
            "vpc_id": "vpc-071096b5a46adb53f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "development",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:633800640196:loadbalancer/app/terraform-lab-alb/108bed97773f6067",
            "arn_suffix": "app/terraform-lab-alb/108bed97773f6067",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-lab-alb-539117690.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:633800640196:loadbalancer/app/terraform-lab-alb/108bed97773f6067",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-lab-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03d62a43eaf3b37fd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b8f286f4d0825341"
              },
              {
                "subnet_id": "subnet-0ef82e39b8ae44d82"
              }
            ],
            "subnets": [
              "subnet-0b8f286f4d0825341",
              "subnet-0ef82e39b8ae44d82"
            ],
            "vpc_id": "vpc-071096b5a46adb53f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.load-balancer",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-lab-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0905ad0033881a15d",
            "association_id": "eipassoc-09d102b485f1e5a6f",
            "connectivity_type": "public",
            "id": "nat-02fd017e224767e07",
            "network_interface_id": "eni-060bec577a34a8211",
            "private_ip": "10.0.1.231",
            "public_ip": "3.20.216.51",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ef82e39b8ae44d82",
            "tags": {
              "Name": "terraform-lab-ngw"
            },
            "tags_all": {
              "Name": "terraform-lab-ngw"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.terraform-lab-igw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-lab-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-ngw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b792e60cedf01f511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02fd017e224767e07",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b792e60cedf01f51",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.terraform-lab-igw",
            "aws_nat_gateway.terraform-lab-ngw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a309de0ab5d3ae55",
            "id": "r-rtb-0b295c3c4e97f5bee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b295c3c4e97f5bee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-lab-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633800640196:route-table/rtb-0b792e60cedf01f51",
            "id": "rtb-0b792e60cedf01f51",
            "owner_id": "633800640196",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02fd017e224767e07",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-terraform-lab-route-table"
            },
            "tags_all": {
              "Name": "private-terraform-lab-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-071096b5a46adb53f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633800640196:route-table/rtb-0b295c3c4e97f5bee",
            "id": "rtb-0b295c3c4e97f5bee",
            "owner_id": "633800640196",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a309de0ab5d3ae55",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-terraform-lab-route-table"
            },
            "tags_all": {
              "Name": "public-terraform-lab-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-071096b5a46adb53f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f207cba4a2e6b0e6",
            "route_table_id": "rtb-0b792e60cedf01f51",
            "subnet_id": "subnet-04f9bb269fd864edf"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf7f6dd970bde237",
            "route_table_id": "rtb-0b792e60cedf01f51",
            "subnet_id": "subnet-04fb34434eb330fe1"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bf908c439482fe0",
            "route_table_id": "rtb-0b295c3c4e97f5bee",
            "subnet_id": "subnet-0ef82e39b8ae44d82"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041590e443c955a2d",
            "route_table_id": "rtb-0b295c3c4e97f5bee",
            "subnet_id": "subnet-0b8f286f4d0825341"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633800640196:security-group/sg-097c5e722c0dcf4b9",
            "description": "Allows inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097c5e722c0dcf4b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-03d62a43eaf3b37fd"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2_security_group",
            "name_prefix": "",
            "owner_id": "633800640196",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071096b5a46adb53f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load-balancer",
            "aws_vpc.terraform-lab-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633800640196:security-group/sg-03d62a43eaf3b37fd",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d62a43eaf3b37fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_security_group",
            "name_prefix": "",
            "owner_id": "633800640196",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071096b5a46adb53f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633800640196:subnet/subnet-04f9bb269fd864edf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f9bb269fd864edf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633800640196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-terraform-lab-subnet-1"
            },
            "tags_all": {
              "Name": "private-terraform-lab-subnet-1"
            },
            "vpc_id": "vpc-071096b5a46adb53f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633800640196:subnet/subnet-04fb34434eb330fe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fb34434eb330fe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633800640196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-terraform-lab-subnet-2"
            },
            "tags_all": {
              "Name": "private-terraform-lab-subnet-2"
            },
            "vpc_id": "vpc-071096b5a46adb53f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633800640196:subnet/subnet-0ef82e39b8ae44d82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef82e39b8ae44d82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633800640196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-terraform-lab-subnet-1"
            },
            "tags_all": {
              "Name": "public-terraform-lab-subnet-1"
            },
            "vpc_id": "vpc-071096b5a46adb53f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633800640196:subnet/subnet-0b8f286f4d0825341",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8f286f4d0825341",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633800640196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-terraform-lab-subnet-2"
            },
            "tags_all": {
              "Name": "public-terraform-lab-subnet-2"
            },
            "vpc_id": "vpc-071096b5a46adb53f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-lab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633800640196:vpc/vpc-071096b5a46adb53f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf034a071db23f3f",
            "default_route_table_id": "rtb-03bd4132e0b40be89",
            "default_security_group_id": "sg-0df22232c18efc12a",
            "dhcp_options_id": "dopt-0ceb8b66f947a9a79",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071096b5a46adb53f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03bd4132e0b40be89",
            "owner_id": "633800640196",
            "tags": {
              "Name": "terraform-lab-vpc"
            },
            "tags_all": {
              "Name": "terraform-lab-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}